--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -5,6 +5,7 @@
         <title>{{now_title}}</title>
         <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
         <link type="text/css" rel="stylesheet" href="../static/css/another.css">
+        <link type="text/css" rel="stylesheet" href="../static/css/index.css">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="../static/js/bootstrap.min.js"></script>
         <script src="../static/js/another.js"></script>
