--- a/Sign/templates/Sign_up.html
+++ b/Sign/templates/Sign_up.html
@@ -5,6 +5,7 @@
         <title>Sign_up</title>
         <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
         <link type="text/css" rel="stylesheet" href="../static/css/another.css">
+        <link type="text/css" rel="stylesheet" href="../static/css/sign_up.css">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="../static/js/bootstrap.min.js"></script>
         <script src="../static/js/another.js"></script>
