--- a/Sign/static/css/jump.css
+++ b/Sign/static/css/jump.css
@@ -1,15 +1,19 @@
 #center6{
-    left:32%;
-    top:15%;
-    width:32%;
-    height:calc(50% - 100px);
+    left:50%;
+    top:100px;
+    width:400px;
+    height:600px;
     overflow: auto;
     position: absolute;
     border-radius: 15px;
     box-shadow:2px 2px 1px rgba(48, 45, 45, 0.986);
-    background: rgb(250, 227, 226);
+    background: rgb(239, 248, 233);
     display:inline-block; 
     width:fill-available;
+    transform: translate(-50%,0%);
+}
+#center6 .row .text-center{
+    color:black;
 }
 
 #center7{
@@ -26,7 +30,7 @@
     -ms-transform: translate(-10%,2%);
     overflow: auto;
     position: relative;
-    background: rgb(250, 227, 226); 
+    background: rgb(239, 248, 233);
     font-family: "华文中宋";
 }
 
