--- a/Sign/static/css/sign_in.css
+++ b/Sign/static/css/sign_in.css
@@ -24,10 +24,10 @@
 }
 
 #center5{
-    left:39%;
-    top:25%;
-    width:20%;
-    height:calc(68% - 100px);
+    left:50%;
+    top:100px;
+    width:400px;
+    height:600px;
     overflow: auto;
     position: absolute;
     border-radius: 15px;
@@ -35,6 +35,7 @@
     background: rgb(239, 248, 233);
     display:inline-block; 
     width:fill-available;
+    transform: translate(-50%,0%);
 }
 
 .navbar .nav > li > .tips{
