--- a/Sign/templates/Index.html
+++ b/Sign/templates/Index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
+                        <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
                         <div class="caption">
                             <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><strong class="info" id="movie_show_1_title">{{movie_show_1_title}}</strong></a><br>
                             <strong class="info" id="movie_show_1_score">豆瓣评分：{{movie_show_1_score}}</strong><br>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
+                        <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
                         <div class="caption">
                             <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><strong class="info" id="movie_show_2_title">{{movie_show_2_title}}</strong></a><br>
                             <strong class="info" id="movie_show_2_score">豆瓣评分：{{movie_show_2_score}}</strong><br>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
+                        <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
                         <div class="caption">
                             <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><strong class="info" id="movie_show_3_title">{{movie_show_3_title}}</strong></a><br>
                             <strong class="info" id="movie_show_3_score">豆瓣评分：{{movie_show_3_score}}</strong><br>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
+                        <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
                         <div class="caption">
                             <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><strong class="info" id="movie_show_4_title">{{movie_show_4_title}}</strong></a><br>
                             <strong class="info" id="movie_show_4_score">豆瓣评分：{{movie_show_4_score}}</strong><br>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
+                        <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
                         <div class="caption">
                             <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><strong class="info" id="movie_show_5_title">{{movie_show_5_title}}</strong></a><br>
                             <strong class="info" id="movie_show_5_score">豆瓣评分：{{movie_show_5_score}}</strong><br>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
+                        <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
                         <div class="caption">
                             <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><strong class="info" id="movie_show_6_title">{{movie_show_6_title}}</strong></a><br>
                             <strong class="info" id="movie_show_6_score">豆瓣评分：{{movie_show_6_score}}</strong><br>
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
+                        <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
                         <div class="caption">
                             <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><strong class="info" id="movie_show_7_title">{{movie_show_7_title}}</strong></a><br>
                             <strong class="info" id="movie_show_7_score">豆瓣评分：{{movie_show_7_score}}</strong><br>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
+                        <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
                         <div class="caption">
                             <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><strong class="info" id="movie_show_8_title">{{movie_show_8_title}}</strong></a><br>
                             <strong class="info" id="movie_show_8_score">豆瓣评分：{{movie_show_8_score}}</strong><br>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
+                        <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
                         <div class="caption">
                             <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><strong class="info" id="movie_show_9_title">{{movie_show_9_title}}</strong></a><br>
                             <strong class="info" id="movie_show_9_score">豆瓣评分：{{movie_show_9_score}}</strong><br>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
+                        <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
                         <div class="caption">
                             <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><strong class="info" id="movie_show_10_title">{{movie_show_10_title}}</strong></a><br>
                             <strong class="info" id="movie_show_10_score">豆瓣评分：{{movie_show_10_score}}</strong><br>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
+                        <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
                         <div class="caption">
                             <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><strong class="info" id="movie_show_11_title">{{movie_show_11_title}}</strong></a><br>
                             <strong class="info" id="movie_show_11_score">豆瓣评分：{{movie_show_11_score}}</strong><br>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
+                        <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
                         <div class="caption">
                             <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><strong class="info" id="movie_show_12_title">{{movie_show_12_title}}</strong></a><br>
                             <strong class="info" id="movie_show_12_score">豆瓣评分：{{movie_show_12_score}}</strong><br>
