--- a/Sign/templates/Movie.html
+++ b/Sign/templates/Movie.html
@@ -87,5 +87,15 @@
                 }
             }
         </script>
+        <div class="container" id = "center5">
+            <div row="comment-header">
+                <p class="text-center"><h3>评论区</h3></p>
+            </div>
+            <div class="Input_Box">
+                    <p class="text-center"><h4>请登录后再进行评论</h4></p>
+                   <textarea class="Input_text"></textarea>
+                   <div class="Input_Foot"> <a class="postBtn">确定</a> </div>
+            </div>
+        </div>
     </body>
 </html>
