--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
+                        <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
+                        <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
+                        <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
+                        <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
+                        <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
+                        <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
+                        <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
+                        <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
+                        <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
+                        <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
+                        <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
+                        <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
                             <button class="btn btn-warning btn-sm">不喜欢</button>
