--- a/Sign/templates/Movie_User.html
+++ b/Sign/templates/Movie_User.html
@@ -95,5 +95,14 @@
                 }
             }
         </script>
+        <div class="container" id = "center5">
+            <div row="comment-header">
+                <p class="text-center"><h3>评论区</h3></p>
+            </div>
+            <div class="Input_Box">
+                    <textarea class="Input_text"></textarea>
+                    <div class="Input_Foot"> <a class="postBtn">确定</a> </div>
+            </div>
+        </div>
     </body>
 </html>
