--- a/Sign/templates/Movie.html
+++ b/Sign/templates/Movie.html
@@ -47,6 +47,15 @@
                 </div>
             </div>
         </div>
+        <br>
+        <div class="container" id = "center5">
+            <div row="comment-header">
+                <p class="text-center"><h3>评论区</h3></p>
+            </div>
+            <div class="Input_Box">
+                <textarea class="Input_text" placeholder="请登录后再进行评论" disabled></textarea>
+            </div>
+        </div>
         <script>
             var info_tags = {'导演':'diretor','编剧':'screenwriter','类型':'types',
                 '主演':'actor','官方网站':'website','制片国家/地区':'country',
@@ -87,15 +96,5 @@
                 }
             }
         </script>
-        <div class="container" id = "center5">
-            <div row="comment-header">
-                <p class="text-center"><h3>评论区</h3></p>
-            </div>
-            <div class="Input_Box">
-                    <p class="text-center"><h4>请登录后再进行评论</h4></p>
-                   <textarea class="Input_text"></textarea>
-                   <div class="Input_Foot"> <a class="postBtn">确定</a> </div>
-            </div>
-        </div>
     </body>
 </html>
